# CordeBlunt

./: .gitignore  CMakeLists.txt  TODO.md  words.txt
src/: colored_letter.h  game.h  io.h  main.c  terminal.h
src/game/: board.c  game.c  letter_tracker.c
src/io/: io.c
src/terminal/: terminal.c
